2011-12-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.14 ========================
	* 

2011-12-02  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ini.tcl: [Bug 3419727]: Fixed the creative writing issue
	* ini.man: with what should be local variables of _loadfile
	* pkgIndex.tcl: and _commit. Generally reworked to use the
	  'variable' command to bring object state into scope.
	  Bumped version to 0.2.4

2011-01-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.13 ========================
	* 

2009-12-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.12 ========================
	* 

2008-12-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11.1 ========================
	* 

2008-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11 ========================
	* 

2008-06-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* inifile.pcx: New file. Syntax definitions for the public
	  commands of the inifile package.

2008-05-10  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ini.tcl: Fixed definition of procedure 'commentchar'. Was
	* ini.man: defined global instead of in the '::ini' namespace.
	* pkgIndex.tcl: This fixes [SF Tcllib Bug 1917035]. Bumped version
	  to 0.2.3.

2008-03-14  Andreas Kupries  <andreask@activestate.com>

	* ini.tcl: Simplified the initialization code. Bumped version to
	* ini.man: 0.2.2.
	* pkgIndex.tcl:

2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-08-20  Andreas Kupries  <andreask@activestate.com>

	* ini.man: Bumped package version to 0.2.1, due to bugfix in last
	* ini.tcl: entry.
	* pkgIndex.tcl:

2007-08-16 Aaron Faupell <afaupell@users.sourceforge.net>
